--- a/stylesheets/cnode.css
+++ b/stylesheets/cnode.css
@@ -104,8 +104,8 @@ nav{
 	display: block;
 	position: relative;
 	width: 100%;
-	height: 4rem;
-	background: #eee;
+	height: 7rem;
+
 	margin-top: 4rem;
 	padding-top: 0;
 }
@@ -114,8 +114,9 @@ nav ul{
 	position: relative;
 	top:-0.1rem;
 	width: 100%;
-	height: 100%;
+	height: 3rem;
 	display: flex;
+	background: #eee;
 	margin: 0;
 	padding: 0;
 	flex-flow: nowrap;
@@ -136,7 +137,7 @@ nav a{
 	display: inline-block;
 	width: 100%;
 	height: 100%;
-	line-height: 3.8rem;
+	line-height: 3.3rem;
 	font-size: 1.6rem;
 }
 
@@ -144,5 +145,97 @@ nav a:hover{
 	border:1px solid red;
 }
 
+nav .news{
+	margin: 0 1rem;
+	display: block;
+	position: relative;
+	width: 100%;
+	height: 3.5rem;
+	text-indent: 2rem;
+	font-size: 1.6rem;
+	line-height: 3.5rem;
+	border-bottom: 1px solid #ccc;
+	font-weight: 600;
+	color: #666;
+}
 
-nav li:active
+nav .news .setting{
+
+		display: inline-block;
+		float: right;
+		text-indent: -3rem;
+		font-size: 1.2rem;
+		color: #999;
+		font-weight: 100;
+}
+
+
+/*nav li:active*/
+
+.article{
+	width: 100%;
+}
+
+.article ul{
+	width: 100%;
+	/*height: */
+	padding: 0;
+	padding: 0 1rem 0 1rem;
+	margin: 0;
+}
+
+.article li{
+	list-style: none;
+	text-decoration: none;
+
+	padding: 0;
+	margin: 0;
+
+	width: 95%;
+
+	border-bottom:1px solid #ccc;
+}
+
+.article li .header{
+	width: 100%;
+	height: 2.5rem;
+}
+
+.article li .name{
+	font-size: 1.5rem;
+	line-height: 2.5rem;
+	color: black;
+}
+
+.article li time{
+	font-size: 1.2rem;
+	line-height: 2.5rem;
+	color: #999;
+} 
+
+.article .makedown{
+	font-size: 1.4rem;
+	color: black;
+}
+
+.article h2{
+	padding:  0 ;
+	margin: 0;
+	font-size: 1.6rem;
+	/*line-height: 2.7rem;*/
+}
+
+.article .title{
+	font-size: 1.6rem;
+	line-height: 1.7rem;
+	color: #259;
+	font-weight: 700;
+	padding-bottom: 0.7rem;
+}
+
+.article .footer{
+	padding-top: 1rem;
+	padding-bottom: 1rem;	
+
+	color: #999;
+}
