--- a/stylesheets/cnode.css
+++ b/stylesheets/cnode.css
@@ -104,7 +104,7 @@ nav{
 	display: block;
 	position: relative;
 	width: 100%;
-	height: 7rem;
+	height: 7.4rem;
 
 	margin-top: 4rem;
 	padding-top: 0;
@@ -114,7 +114,7 @@ nav ul{
 	position: relative;
 	top:-0.1rem;
 	width: 100%;
-	height: 3rem;
+	height: 3.8rem;
 	display: flex;
 	background: #eee;
 	margin: 0;
@@ -123,54 +123,71 @@ nav ul{
 }
 
 nav li{
-
 	list-style: none;
 	flex:20%;
-	height: 100%;
 	color: black;
-	font-size: 1.4rem;
+	font-size: 1.6rem;
 	text-align: center;
 	padding-top: 0;
 	margin-top: 0;
+	border-top:0.1rem solid #eee;
+	border-bottom: 0.1rem solid #eee;
 }
 nav a{
 	display: inline-block;
 	width: 100%;
 	height: 100%;
-	line-height: 3.3rem;
 	font-size: 1.6rem;
+	line-height: 3.6rem;
+	
 }
 
 nav a:hover{
-	border:1px solid red;
+	border-top:0.1rem solid #ddd;
+	border-bottom: 0.1rem solid #ddd;
+
+	border-right: 0.1rem solid #ddd;
+	border-left: 0.1rem solid #ddd;
+}
+
+nav a:hover:last-child{
+	/*border: none;*/
+}
+
+nav .wrap{
+	position: relative;
+	width: calc(100%-2rem);
+	padding: 0;
+	margin: 0 1rem;
+	/*padding: 0 1rem;*/
 }
 
 nav .news{
-	margin: 0 1rem;
-	display: block;
 	position: relative;
 	width: 100%;
-	height: 3.5rem;
+	margin: 0 auto;
+	height: 3.6rem;
+	border-bottom: 0.1rem solid #ccc;
+}
+
+nav .news .newstates{
+	display: inline-block;
 	text-indent: 2rem;
 	font-size: 1.6rem;
-	line-height: 3.5rem;
-	border-bottom: 1px solid #ccc;
+	line-height: 3.6rem;
 	font-weight: 600;
-	color: #666;
+	color: black;
 }
 
 nav .news .setting{
-
-		display: inline-block;
-		float: right;
-		text-indent: -3rem;
-		font-size: 1.2rem;
-		color: #999;
-		font-weight: 100;
+	display: inline-block;
+	float: right;
+	text-indent: -3rem;
+	font-size: 1.4rem;
+	line-height: 3.6rem;
+	color: #999;
 }
 
-
-/*nav li:active*/
 
 .article{
 	width: 100%;
@@ -178,21 +195,19 @@ nav .news .setting{
 
 .article ul{
 	width: 100%;
-	/*height: */
 	padding: 0;
 	padding: 0 1rem 0 1rem;
 	margin: 0;
 }
 
 .article li{
+
 	list-style: none;
 	text-decoration: none;
-
-	padding: 0;
-	margin: 0;
-
+	padding: 0 0 0.5rem 0;
+	/*margin-top: 1rem;*/
+	margin: 0.5rem 0 0 0;
 	width: 95%;
-
 	border-bottom:1px solid #ccc;
 }
 
@@ -204,20 +219,21 @@ nav .news .setting{
 .article li .name{
 	display: inline-block;
 	margin-right: 1rem;
-	font-size: 1.5rem;
+	font-size: 1.6rem;
 	line-height: 2.5rem;
-	color: black;
+	color: #222;
+	font-family: "微软雅黑";
 }
 
 .article li time{
-	font-size: 1.2rem;
+	font-size: 1.4rem;
 	line-height: 2.5rem;
 	color: #999;
 } 
 
 .article .makedown{
 	font-size: 1.4rem;
-	line-height: 2rem;
+	line-height: 2.0rem;
 	color: black;
 
 	/*height: 5rem;*/
@@ -245,13 +261,18 @@ nav .news .setting{
 	line-height: 1.7rem;
 	color: #259;
 	font-weight: 700;
-	/*padding-bottom: 0.7rem;*/
 }
 
 
 .article .footer{
-	padding-top: 1rem;
-	padding-bottom: 1rem;	
-
+/*	padding-top: 1rem;
+	padding-bottom: 1rem;	*/
+	font-size: 1.4rem;
+	line-height: 2.5rem;
 	color: #999;
+}
+
+.article .footer span{
+	display: inline-block;
+	margin-right: 1rem;
 }
