--- a/stylesheets/cnode.css
+++ b/stylesheets/cnode.css
@@ -194,7 +194,7 @@ nav .news .setting{
 }
 
 .article ul{
-	width: 100%;
+	width: calc(100%-2rem);
 	padding: 0;
 	padding: 0 1rem 0 1rem;
 	margin: 0;
@@ -207,13 +207,25 @@ nav .news .setting{
 	padding: 0 0 0.5rem 0;
 	/*margin-top: 1rem;*/
 	margin: 0.5rem 0 0 0;
-	width: 95%;
+	width: 100%;
 	border-bottom:1px solid #ccc;
 }
 
 .article li .header{
+	position: relative;
 	width: 100%;
 	height: 2.5rem;
+}
+
+.article .header img{
+
+	display: inline-block;
+	width: 2.0rem;
+	height: 2.0rem;
+	margin: 0.25rem 0;
+	/*border: 1px solid red;*/
+
+	float: right;
 }
 
 .article li .name{
