--- a/stylesheets/normalize.css
+++ b/stylesheets/normalize.css
@@ -6,7 +6,15 @@
  *    user zoom.
  */
 
+html { font-size : 20px; }
+@media only screen and (min-width: 401px){ html { font-size: 25px !important; } } 
+@media only screen and (min-width: 428px){ html { font-size: 26.75px !important; } } 
+@media only screen and (min-width: 481px){ html { font-size: 30px !important; } } 
+@media only screen and (min-width: 569px){ html { font-size: 35px !important; } } 
+@media only screen and (min-width: 641px){ html { font-size: 40px !important; } }
+
 html {
+  /*font-size: 16px;*/
   font-family: sans-serif; /* 1 */
   -ms-text-size-adjust: 100%; /* 2 */
   -webkit-text-size-adjust: 100%; /* 2 */
