--- a/stylesheets/cnode.css
+++ b/stylesheets/cnode.css
@@ -445,3 +445,41 @@ nav .setting i{
 	text-align: center;
 	z-index: 1000;
 }
+
+.circular{
+	display: inline-block;
+	position: fixed;
+
+	bottom: 3rem;
+	right: 1rem;
+	background-color: rgba(249,241,12,0.5);
+	width: 2.5rem;
+	height: 2.5rem;
+	border-radius: 2rem;
+
+}
+
+
+.circular i{
+	width: 1.5rem;
+	height: 1.5rem;
+	margin: 0.5rem;
+
+	background-position: center;
+	background-repeat: no-repeat;
+	-webkit-background-size: cover;
+	background-size: cover;
+}
+
+.circular .add{
+	display: none;
+	background-image: url(../images/add.png);
+
+}
+
+.circular .mul{
+	display: inline-block;
+	background-image: url(../images/mul.png);
+
+}
+
